# deep-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
api/: main.py  rate_limit.py
deep_research_agent/: graph.py  llm.py  nodes.py  state.py  tools.py
deploy/: README.md  deepresearch-backend.service  research.learnpath.tech.nginx.conf
eval/: dataset.py  run_eval.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
tests/: test_api.py  test_eval.py  test_graph.py  test_tools.py
