[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Mini DeepResearch Agent: LangGraph 编排 + Langfuse tracing/evaluation"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=1.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=1.0",
    "tavily-python>=0.5",
    "langfuse>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.fastapi]
entrypoint = "api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_research_agent"]
